# mopidy-yap

./: .dockerignore  .env  .gitignore  Dockerfile  MANIFEST.in  README.rst  compose.yaml  package-lock.json  package.json  pyproject.toml  setup.cfg
docker/config/: mopidy.conf  requirements.txt
mopidy_revelry/: __init__.py  ext.conf  frontend.py  websocket.py
mopidy_revelry/static/: asset-manifest.json  index.html
mopidy_revelry/static/static/css/: main.ad91fe6a.css  main.ad91fe6a.css.map
mopidy_revelry/static/static/js/: main.51fdc74f.js  main.c6f75b23.js  main.c6f75b23.js.map
mopidy_yap/: __init__.py  ext.conf  frontend.py  websocket.py
mopidy_yap/static/: asset-manifest.json  index.html  manifest.json
mopidy_yap/static/static/css/: main.a09baf7d.css  main.a09baf7d.css.map
mopidy_yap/static/static/js/: main.51fdc74f.js.map  main.d81b8acf.js  main.d81b8acf.js.map  main.ff1e46d6.js  main.ff1e46d6.js.map
public/: index.html  manifest.json
src/: index.css  index.js
src/js/: HelmetHeaders.js  Playlist.js  SearchComponent.js  SkipButton.js
