[metadata]
name = Mopidy-Yap
version = 0.1.4
author = Zsolt Endreffy
author_email = ifjezsolt@gmail.com
description = Mopidy web extension for party in react
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dyj216/mopidy-yap
license = Apache License, Version 2.0
license_file = LICENSE
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    Mopidy >= 3.0
    Pykka >= 2.0.1
    setuptools

[options.entry_points]
mopidy.ext =
    yap = mopidy_yap:Extension
